fix css reorder conflicts in articles 1, 3, 4, new article, blog, project, rundown and nexo pages

--- a/css/article_3.css
+++ b/css/article_3.css
@@ -1,4 +1,4 @@
-/* -------------------------------------------GLOBAL STYLING------------------------------------------- */
+/* Global styling */
 :root,
 :root.monokai {
     --background-color: #1e1f1c;
@@ -14,19 +14,19 @@
     --line-break: #88846f;
     --accent: #a6e22e;
     --accent-hover: #4e94ce;
-    --article3-heading-paragraph: #cacabe;
-    --anchortag-orange-color: #fd971f;
     --color-focus: #75715e;
     --color-scrollbar-border: #7f7f7f4d;
     --color-scrollbar-thumb: #79797966;
     --color-scrollbar-thumb-hover: #646464b3;
     --color-scrollbar-thumb-active: #bfbfbf66;
     --color-scrollbar-shadow: #000000;
+    --text-selection-color: #878b9180;
+    --anchortag-orange-color: #fd971f;
     --color-blockquote: var(--line-break);
     --color-blockquote-symbol: var(--line-break);
     --code-background-color: #22231e;
     --code-color: var(--secondary-text);
-    --text-selection-color: #878b9180;
+    --article3-heading-paragraph: #cacabe;
     --font-sans: -apple-system, BlinkMacSystemFont, Segoe WPC, Segoe UI,
         system-ui, Ubuntu, sans-serif;
     --font-mono: Fira Code, monospace;
@@ -45,18 +45,18 @@
     --line-break: #6a9955;
     --accent: #4ec9b0;
     --accent-hover: #4e94ce;
-    --anchortag-orange-color: #ce9178;
     --color-focus: #007fd4;
     --color-scrollbar-border: #7f7f7f4d;
     --color-scrollbar-thumb: #79797966;
     --color-scrollbar-thumb-hover: #646464b3;
     --color-scrollbar-thumb-active: #bfbfbf66;
     --color-scrollbar-shadow: #000000;
+    --text-selection-color: #264f78;
     --color-blockquote: var(--body-text);
     --color-blockquote-symbol: var(--line-break);
     --code-background-color: #1c1c1c;
     --code-color: var(--secondary-text);
-    --text-selection-color: #264f78;
+    --anchortag-orange-color: #ce9178;
     --font-sans: -apple-system, BlinkMacSystemFont, Segoe WPC, Segoe UI,
         system-ui, Ubuntu, sans-serif;
     --font-mono: Fira Code, monospace;
@@ -75,18 +75,19 @@
     --line-break: #008000;
     --accent: #267f99;
     --accent-hover: #0000ff;
-    --anchortag-orange-color: #800000;
+
     --color-focus: #0090f1;
     --color-scrollbar-border: #7f7f7f4d;
     --color-scrollbar-thumb: #64646466;
     --color-scrollbar-thumb-hover: #646464b3;
     --color-scrollbar-thumb-active: #00000099;
     --color-scrollbar-shadow: #dddddd;
+    --text-selection-color: #add6ff;
+    --anchortag-orange-color: #800000;
     --color-blockquote: var(--body-text);
     --color-blockquote-symbol: #0451a5;
     --code-background-color: #fbfbfb;
     --code-color: var(--secondary-text);
-    --text-selection-color: #add6ff;
     --font-sans: -apple-system, BlinkMacSystemFont, Segoe WPC, Segoe UI,
         system-ui, Ubuntu, sans-serif;
     --font-mono: Fira Code, monospace;
@@ -105,18 +106,18 @@
     --line-break: #6a737d;
     --accent: #96d0ff;
     --accent-hover: #4e94ce;
-    --anchortag-orange-color: #9ecbff;
     --color-focus: #005cc5;
     --color-scrollbar-border: #1b1f23;
     --color-scrollbar-thumb: #6a737d33;
     --color-scrollbar-thumb-hover: #6a737d44;
     --color-scrollbar-thumb-active: #6a737d88;
     --color-scrollbar-shadow: #00000088;
+    --text-selection-color: #3392ff44;
+    --anchortag-orange-color: #9ecbff;
     --color-blockquote: #85e89d;
     --color-blockquote-symbol: var(--color-blockquote);
     --code-background-color: #202428;
     --code-color: var(--secondary-text);
-    --text-selection-color: #3392ff44;
     --font-sans: -apple-system, BlinkMacSystemFont, Segoe WPC, Segoe UI,
         system-ui, Ubuntu, sans-serif;
     --font-mono: Fira Code, monospace;
@@ -136,18 +137,18 @@
     --line-break: #6a737d;
     --accent: #032f62;
     --accent-hover: #0000ff;
-    --anchortag-orange-color: #032f62;
     --color-focus: #2188ff;
     --color-scrollbar-border: #ffffff;
     --color-scrollbar-thumb: #959da533;
     --color-scrollbar-thumb-hover: #959da544;
     --color-scrollbar-thumb-active: #959da588;
     --color-scrollbar-shadow: #6a737d33;
+    --text-selection-color: #0366d625;
+    --anchortag-orange-color: #032f62;
     --color-blockquote: #22863a;
     --color-blockquote-symbol: var(--color-blockquote);
     --code-background-color: #fcfcfc;
     --code-color: var(--secondary-text);
-    --text-selection-color: #0366d625;
     --font-sans: -apple-system, BlinkMacSystemFont, Segoe WPC, Segoe UI,
         system-ui, Ubuntu, sans-serif;
     --font-mono: Fira Code, monospace;
@@ -167,18 +168,18 @@
     --line-break: #93a1a1;
     --accent: #268bd2;
     --accent-hover: #0000ff;
-    --anchortag-orange-color: #2aa198;
     --color-focus: #d3af86;
     --color-scrollbar-border: #7f7f7f4d;
     --color-scrollbar-thumb: #64646466;
     --color-scrollbar-thumb-hover: #646464b3;
     --color-scrollbar-thumb-active: #00000099;
     --color-scrollbar-shadow: #dddddd;
+    --text-selection-color: #eee8d5;
+    --anchortag-orange-color: #2aa198;
     --color-blockquote: #859900;
     --color-blockquote-symbol: var(--color-blockquote);
     --code-background-color: #f9f1dc;
     --code-color: var(--secondary-text);
-    --text-selection-color: #eee8d5;
     --font-sans: -apple-system, BlinkMacSystemFont, Segoe WPC, Segoe UI,
         system-ui, Ubuntu, sans-serif;
     --font-mono: Fira Code, monospace;
@@ -187,8 +188,8 @@
 *::before,
 *::after {
     margin: 0;
-    padding: 0;
     box-sizing: border-box;
+    padding: 0;
 }
 *::-webkit-scrollbar-corner,
 *::-webkit-scrollbar-button {
@@ -219,7 +220,6 @@ li {
     list-style: none;
 }
 
-/* ---------------------------------------------------------------------------------------------------------------- */
 body {
     background-color: var(--background-color);
     /* color: var(--body-text); */
@@ -235,6 +235,8 @@ body::-webkit-scrollbar {
     max-width: 81ch;
     margin: 5rem auto;
 }
+
+/* Header/Navbar */
 .nav-list {
     display: flex;
     margin: 0 auto;
@@ -251,9 +253,9 @@ body::-webkit-scrollbar {
 }
 
 .nav-link {
+    color: var(--navbar-text);
     font-family: var(--font-sans);
     font-size: 0.8rem;
-    color: var(--navbar-text);
 }
 
 .nav-link div {
@@ -267,11 +269,11 @@ body::-webkit-scrollbar {
 }
 
 .article-tab a {
+    vertical-align: middle;
     margin-left: 0.2rem;
     padding: 0.2rem 0.2rem 0;
     color: var(--navbar-text);
     font-weight: normal;
-    vertical-align: middle;
 }
 
 .article-tab a:hover {
@@ -283,9 +285,11 @@ body::-webkit-scrollbar {
     color: var(--active-navbar-text);
 }
 
+/* Main */
 .editor {
-    background-color: var(--editor-background);
     padding: 1.5rem 5rem;
+    background-color: var(--editor-background);
+
     /* height: 100%; */
     /* height: 100vh; */
 }
@@ -303,9 +307,9 @@ body::-webkit-scrollbar {
     justify-content: space-between;
 }
 h1 {
+    color: var(--body-text);
     font-size: 1.25rem;
     font-weight: bold;
-    color: var(--body-text);
 }
 .heading-text {
     color: var(--article3-heading-paragraph);
@@ -313,27 +317,27 @@ h1 {
 }
 
 .time {
+    color: var(--article3-heading-paragraph);
     font-size: 0.8rem;
     white-space: nowrap;
-    color: var(--article3-heading-paragraph);
 }
 .time1 {
+    color: var(--article3-heading-paragraph);
     font-size: 0.8rem;
     text-align: right;
-    color: var(--article3-heading-paragraph);
 }
 .image-container {
     padding-top: 1.5rem;
 }
 .image {
+    object-fit: contain;
     width: 100%;
     height: 100%;
-    object-fit: contain;
     cursor: zoom-in;
 }
 .text-1 {
-    color: var(--body-text);
     padding: 1.7rem 0 1.5rem;
+    color: var(--body-text);
 }
 .text-1-content {
     display: flex;
@@ -343,26 +347,26 @@ h1 {
 
 .text-1-content::before {
     content: "> > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > >";
+    margin-right: 2ch;
     width: 1ch;
     height: 1.5rem;
-    margin-right: 2ch;
     color: var(--color-blockquote-symbol);
 }
 i {
     font-weight: bold;
 }
 .anchortag-1 {
-    color: var(--accent);
     border-bottom: 2px solid var(--accent);
+    color: var(--accent);
 }
 .anchortag-1:hover {
-    color: var(--accent-hover);
     border-bottom: 2px solid var(--accent-hover);
+    color: var(--accent-hover);
 }
 h2 {
-    color: var(--body-text);
     padding-top: 1.5rem;
     font-size: 1.25rem;
+    color: var(--body-text);
 }
 
 .edge {
@@ -384,9 +388,9 @@ h2 {
 figcaption {
     display: flex;
     justify-content: center;
+    padding: 0;
     color: var(--secondary-text);
     font-size: 0.82rem;
-    padding: 0;
 }
 .text-3 {
     padding-top: 1.5rem;
@@ -396,9 +400,9 @@ figcaption {
     color: var(--body-text);
 }
 .editor-1 {
+    padding: 1.5rem 4rem;
     background-color: var(--code-background-color);
     color: var(--code-color);
-    padding: 1.5rem 4rem;
 }
 .example {
     margin: 1.5rem 0;
@@ -406,9 +410,7 @@ figcaption {
 
 .text-7 {
     color: var(--secondary-text);
-    /* padding: 1.5rem 0; */
     white-space: nowrap;
-    /* background-color: var(--background-color); */
 }
 .text-8 {
     display: flex;
@@ -423,8 +425,8 @@ figcaption {
 }
 .counter {
     padding-top: 1.5rem;
-    counter-reset: counter-list;
     padding-left: 1rem;
+    counter-reset: counter-list;
 }
 .counter .list {
     position: relative;
@@ -432,21 +434,21 @@ figcaption {
     color: var(--body-text);
 }
 .list::before {
-    counter-increment: counter-list;
-    content: counter(counter-list);
     position: absolute;
     left: -1.1rem;
     color: var(--accent);
+    counter-increment: counter-list;
+    content: counter(counter-list);
 }
 
 .line-break {
     display: flex;
-    height: 1.5rem;
-    margin: 1.5rem 0;
-    border-width: 0px;
-    color: var(--line-break);
     opacity: 80%;
     overflow: hidden !important;
+    margin: 1.5rem 0;
+    border-width: 0px;
+    height: 1.5rem;
+    color: var(--line-break);
 }
 
 .line-break::before {
@@ -456,10 +458,11 @@ figcaption {
 
 .line-break::after {
     content: "-------------------------------------------------------";
-    font-variant-ligatures: none;
     overflow-wrap: anywhere;
+    font-variant-ligatures: none;
 }
 
+/* Footer */
 footer {
     display: flex;
     justify-content: space-between;
@@ -503,8 +506,8 @@ footer {
 }
 
 .arrow {
-    font-size: 1rem;
     color: var(--accent);
+    font-size: 1rem;
 }
 
 .color-theme-name:hover,
@@ -516,15 +519,15 @@ footer {
     position: absolute;
     top: 0;
     left: 0;
+    opacity: 0;
+    -webkit-appearance: none;
     border: none;
     background: none;
     color: var(--body-text);
-    opacity: 0;
-    -webkit-appearance: none;
+    cursor: pointer;
     font-size: 1rem;
     font-weight: 500;
     font-family: "Fira code", monospace;
-    cursor: pointer;
 }
 
 .theme-picker:focus,
@@ -537,17 +540,18 @@ footer {
     color: var(--secondary-text);
 }
 
+/* Line numbers */
 .lines {
     position: absolute;
     top: 9.2rem;
-    text-align: right;
     padding: 0 1.5rem;
     color: var(--editor-line-number);
+    text-align: right;
 }
 
 .lines-1:hover {
-    color: var(--editor-line-number-hover);
     cursor: pointer;
+    color: var(--editor-line-number-hover);
 }
 
 .lines-1:active,
@@ -607,7 +611,6 @@ footer {
         padding-bottom: 1.3rem;
     }
     .editor-1 {
-        /* background-color: var(--editor-background); */
         padding: 1.5rem 2rem 1.5rem 3rem;
     }
     .text-1-content {
@@ -636,9 +639,9 @@ footer {
     .lines {
         position: absolute;
         top: 4.2rem;
-        text-align: right;
         padding-left: 0.7rem;
         color: var(--editor-line-number);
+        text-align: right;
     }
 
     .line-break {
